<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.example.amplifydemo.ui.fragment.auth.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center_vertical|start"
                android:text="@string/register_user"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:hint="@string/register_username" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:hint="@string/register_password" />



            <TextView
                android:id="@+id/tv_signIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_15"
                android:background="@color/teal_700"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="20sp" />



            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:text="@={viewmodel.message}"
                android:textColor="@color/accent"
                android:textSize="20sp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>